# TempestMiku

./: .dockerignore  .envrc  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  TODO.md  flake.nix
apps/tm-cli/: Cargo.toml
apps/tm-cli/src/: approval.rs  cli.rs  main.rs  runtime.rs  sink.rs  tests.rs  tests_egress.rs
apps/tm-cli/tests/: p0_runtime.rs
apps/tm-e2e/: Cargo.toml  README.md
apps/tm-e2e/src/: actor_smoke.rs  client.rs  config.rs  drive_smoke.rs  evidence.rs  lib.rs  main.rs  native_coding.rs  record.rs  speaker.rs  sse.rs  tests.rs  voice_eval.rs  workflow.rs
apps/tm-e2e/src/evidence/: model.rs  recorder.rs  report.rs  sanitize.rs  tests.rs
apps/tm-e2e/src/record/: api_scenarios.rs  backend.rs  evolution_policy.rs  native_actor_scenario.rs  native_actor_server.rs  runner.rs  server.rs  ui_scenario.rs
apps/tm-e2e/tests/: workflow.rs
apps/tm-e2e/tests/workflow/: actor_native.rs  basic_api.rs  drive_recorded.rs  fakes.rs  mod.rs  server.rs  support.rs
apps/tm-worker/: Cargo.toml
apps/tm-worker/src/: main.rs  server.rs
crates/tm-agents/: Cargo.toml
crates/tm-agents/src/: actor.rs  executor.rs  lib.rs  mailbox.rs  orchestrate.rs  resources.rs  supervise.rs
crates/tm-agents/src/mailbox/: cancellation.rs  inbox.rs  lifecycle.rs  messages.rs  restart.rs  roster.rs  test_api.rs  tests.rs  types.rs
crates/tm-agents/src/orchestrate/: mailbox_fns.rs  mod.rs  msg.rs  parallel.rs  pipeline.rs  run.rs  spawn.rs  tests.rs
crates/tm-artifacts/: Cargo.toml
crates/tm-artifacts/src/: filesystem.rs  lib.rs  preview.rs  quota.rs  store.rs  tests.rs
crates/tm-core/: Cargo.toml
crates/tm-core/src/: agent.rs  error.rs  lib.rs  llm.rs  mediator.rs  message.rs  prompt.rs  sandbox.rs  shape.rs  sink.rs  stream.rs
crates/tm-core/tests/: loop_test.rs
crates/tm-core/tests/loop_test/: batch.rs  cancellation_session.rs  protocol.rs  streaming.rs  support.rs
crates/tm-drive/: Cargo.toml
crates/tm-drive/src/: lib.rs  organize.rs  policy.rs  resources.rs  store.rs  transduce.rs  types.rs  vdir.rs
crates/tm-drive/src/store/: core.rs  docs.rs  host_fns.rs  metadata.rs  operations.rs  payloads.rs  service.rs  tests.rs  types.rs
crates/tm-drive/src/types/: common.rs  entry.rs  links.rs  organizer.rs  snapshot.rs  tests.rs
crates/tm-drive/tests/: fixtures.rs
crates/tm-drive/tests/fixtures/: data.json  invoice.txt  note.md
crates/tm-egress/: Cargo.toml
crates/tm-egress/src/: budget.rs  error.rs  host.rs  lib.rs  policy.rs  resolver.rs  runtime.rs  state.rs  tests.rs
crates/tm-host/: Cargo.toml
crates/tm-host/src/: egress.rs  evolution.rs  foundation.rs  lib.rs  linked.rs
crates/tm-host/src/foundation/: capability.rs  error.rs  mod.rs  registry.rs  resource.rs
crates/tm-host/src/linked/: config.rs  docs.rs  isolation.rs  secure_fs.rs  tests.rs  tools.rs  util.rs
crates/tm-lang/: Cargo.toml
crates/tm-lang/src/: ast.rs  batch.rs  catalog.rs  check.rs  diagnostic.rs  lexer.rs  lib.rs  machine.rs  parser.rs  runtime.rs  sandbox.rs  span.rs  token.rs  value.rs
crates/tm-lang/src/check/: expressions.rs  helpers.rs  mod.rs  patterns.rs  tests.rs
crates/tm-lang/src/parser/: mechanics.rs  mod.rs  patterns.rs  tests.rs
crates/tm-lang/src/runtime/: builtins.rs  effects.rs  evaluator.rs  host.rs  limits.rs  mod.rs  operators.rs  parallel.rs  render.rs  sizing.rs  tests.rs
crates/tm-lang/src/sandbox/: adapters.rs  mod.rs  session.rs
crates/tm-lang/tests/: conformance.rs  runtime.rs
crates/tm-lang/tests/runtime/: adapters.rs  batch.rs  cancellation.rs  limits.rs  parallel.rs  persistence.rs  semantics.rs  state.rs  support.rs
crates/tm-llm/: Cargo.toml
crates/tm-llm/src/: lib.rs  sse.rs  wire.rs
crates/tm-llm/tests/: live_openai.rs
crates/tm-mcp/: Cargo.toml
crates/tm-mcp/src/: bindings.rs  catalog.rs  effects.rs  error.rs  http_transport.rs  http_transport_tests.rs  lib.rs  live_canary_tests.rs  tests.rs  transport.rs  types.rs  validate.rs
crates/tm-memory/: Cargo.toml
crates/tm-memory/src/: dialectic.rs  dream.rs  durable.rs  embedding.rs  evaluation.rs  evolution.rs  hybrid.rs  input.rs  lib.rs  records.rs  redaction.rs  skill.rs  store.rs  summary.rs
crates/tm-memory/src/durable/: embedding_jobs.rs  readiness.rs
crates/tm-modes/: Cargo.toml
crates/tm-modes/assets/: SOUL.md  modes.json
crates/tm-modes/fixtures/: p2_voice_rubric_v1.json
crates/tm-modes/src/: assets.rs  evolution.rs  lib.rs  managed.rs  mode_addendum.rs  persona_addendum.rs  prompt.rs  resource.rs  skills.rs  tests.rs  types.rs  voice.rs
crates/tm-sandbox/: Cargo.toml
crates/tm-sandbox/src/: deno.rs  lib.rs  ops.rs  prelude.rs  stub.rs  tests.rs  ts.rs
crates/tm-server/: Cargo.toml
crates/tm-server/migrations/: 0001_base.sql  0002_device_auth.sql  0003_durable_work_leases.sql  0004_session_authority_turns.sql  0005_durable_approvals.sql  0006_durable_drive_metadata.sql  0007_auth_device_owner.sql  0008_turn_heartbeats.sql  0009_push_notifications.sql  0010_turn_session_serialization.sql  0011_evolution_audit.sql  0012_evolution_review_proposals.sql  0013_actionable_notifications.sql  0014_p8_durable_memory.sql  0015_p8_hybrid_embeddings.sql  0016_p8_active_content_dedupe.sql  0017_p8_memory_authority_serialization.sql  0018_p8_embedding_lifecycle_hardening.sql  0019_mcp_mutation_effects.sql  0020_egress_effects_budgets.sql  0021_project_entities.sql  0022_project_default_memory_policy.sql  0023_session_project_memory_policy.sql  0024_evolution_episodes.sql  0025_evolution_policies.sql  0026_environment_cognitions.sql  0027_skill_crystallization.sql  0028_skill_runtime_ledgers.sql  0029_memory_pools.sql
crates/tm-server/src/: api.rs  auth.rs  chat.rs  coding_backend.rs  dream.rs  error.rs  evolution.rs  lib.rs  main.rs  memory.rs  native_deno.rs  native_tm.rs  omp_acp.rs  persona.rs  push.rs  runtime.rs  scheduler.rs  session_shards.rs  store.rs  turn_control.rs  voice_asr.rs  webui.rs
crates/tm-worker-protocol/: Cargo.toml
crates/tm-worker-protocol/src/: client.rs  lib.rs  signing.rs
(+687 files in other folders)
