[workspace]
resolver = "3"
members = ["crates/*", "apps/*"]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/mozufu/TempestMiku"

[workspace.dependencies]
# internal
tm-core = { path = "crates/tm-core" }
tm-llm = { path = "crates/tm-llm" }
tm-sandbox = { path = "crates/tm-sandbox" }
tm-artifacts = { path = "crates/tm-artifacts" }
tm-host = { path = "crates/tm-host" }

# async + runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "sync", "time"] }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"
parking_lot = "0.12"

# http + serde
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
sha2 = "0.10"
hex = "0.4"
url = "2"

# errors + tracing
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
