[workspace]
resolver = "3"
members = ["crates/*", "apps/*"]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/mozufu/TempestMiku"

[workspace.dependencies]
# internal
tm-core = { path = "crates/tm-core" }
tm-llm = { path = "crates/tm-llm" }
tm-sandbox = { path = "crates/tm-sandbox" }
tm-artifacts = { path = "crates/tm-artifacts" }
tm-host = { path = "crates/tm-host" }
tm-modes = { path = "crates/tm-modes" }
tm-server = { path = "crates/tm-server" }
tm-agents = { path = "crates/tm-agents" }
tm-memory = { path = "crates/tm-memory" }
tm-drive = { path = "crates/tm-drive" }

# async + runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "sync", "time", "process", "signal"] }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"
parking_lot = "0.12"
rustix = { version = "1.1.4", features = ["fs"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4", "with-uuid-1"] }
bytes = "1"

# http + serde
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
chacha20poly1305 = "0.10"
ece = "2.3.1"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
url = "2"
regex = "1"
globset = "0.4"
ignore = "0.4"
deno_ast = { version = "=0.53.2", features = ["transpiling"] }
deno_error = "=0.7.1"

agent-client-protocol = "1.0.0"

# errors + tracing
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
