[package]
name = "tm-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "TempestMiku CLI: stream a code-execution agent against an OpenAI-compatible endpoint."

[[bin]]
name = "tm"
path = "src/main.rs"

[dependencies]
tm-core.workspace = true
tm-llm.workspace = true
tm-sandbox.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
