[package]
name = "tm-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "TempestMiku CLI: stream a code-execution agent against an OpenAI-compatible endpoint."

[[bin]]
name = "tm"
path = "src/main.rs"

[dependencies]
tm-core.workspace = true
tm-llm.workspace = true
tm-host.workspace = true
tm-artifacts.workspace = true
tm-modes.workspace = true
tm-lang.workspace = true
tm-egress.workspace = true
tm-mcp.workspace = true
async-trait.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
parking_lot.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
