[package]
name = "tm-e2e"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "TempestMiku local/dev E2E hatch that drives Miku through the public session API."

[dependencies]
tm-core.workspace = true
tm-llm.workspace = true
tm-artifacts.workspace = true
tm-drive.workspace = true
tm-host.workspace = true
tm-server.workspace = true
tm-agents.workspace = true
tm-sandbox.workspace = true
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
dotenvy.workspace = true
tokio.workspace = true
chrono.workspace = true
axum.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
