[package]
name = "tm-worker"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "Hardened remote linked-host worker for TempestMiku."

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tm-artifacts.workspace = true
tm-host.workspace = true
tm-worker-protocol.workspace = true
uuid.workspace = true

[dev-dependencies]
reqwest.workspace = true
tempfile = "3"
tm-worker-protocol.workspace = true
