[package]
name = "tm-agents"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "TempestMiku actor lifecycle, mailbox, orchestration, supervision, and agent:// resources."

[dependencies]
tm-host.workspace = true
tm-artifacts.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio.workspace = true
