[package]
name = "tm-artifacts"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "TempestMiku artifact and blob storage."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tempfile = "3"
