[package]
name = "tm-core"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "TempestMiku core: message protocol, streaming agent loop, sandbox/LLM traits."

[dependencies]
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
futures.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
parking_lot = { workspace = true }
