[package]
name = "tm-drive"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "TempestMiku local-first smart drive store, transducers, organizer, and resources."

[dependencies]
tm-artifacts.workspace = true
tm-host.workspace = true
tm-memory.workspace = true
async-trait.workspace = true
chrono.workspace = true
hex.workspace = true
parking_lot.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
tokio.workspace = true
