[package]
name = "tm-host"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "TempestMiku host capability registry, resources, and approvals."

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tm-artifacts.workspace = true
tm-memory.workspace = true
url.workspace = true
regex.workspace = true
globset.workspace = true
ignore.workspace = true
sha2.workspace = true
hex.workspace = true
chrono.workspace = true
tokio.workspace = true
uuid.workspace = true
libc.workspace = true
rustix = { workspace = true, features = ["process"] }

[dev-dependencies]
tokio.workspace = true
tempfile = "3"
