[package]
name = "tm-lang"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tm-artifacts.workspace = true
tm-core.workspace = true
tm-drive.workspace = true
tm-host.workspace = true
tm-memory.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
