[package]
name = "tm-memory"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "TempestMiku memory ownership crate: dream queue contracts and future consolidation."

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
regex.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
tokio.workspace = true
