[package]
name = "tm-modes"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "TempestMiku runtime mode catalog, routing, and skill loading."

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
rustix.workspace = true
tm-artifacts.workspace = true
tm-host.workspace = true

[dev-dependencies]
tempfile = "3"
tokio.workspace = true
