[package]
name = "tm-sandbox"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "TempestMiku sandbox backends. M0 ships a stub; deno_core lands in M1."

[dependencies]
tm-core.workspace = true
tm-artifacts.workspace = true
tm-host.workspace = true
async-trait.workspace = true
serde_json.workspace = true
deno_core = "0.405.0"
deno_ast.workspace = true
deno_error.workspace = true
serde.workspace = true

[dev-dependencies]
tokio.workspace = true
tempfile = "3"
serial_test = "3"
