[package]
name = "tm-server"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "TempestMiku server: session API, SSE stream, persona, and minimal memory substrate."

[dependencies]
tm-core.workspace = true
tm-agents.workspace = true
tm-modes.workspace = true
tm-artifacts.workspace = true
tm-host.workspace = true
axum.workspace = true
tower-http.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
async-trait.workspace = true
async-stream.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio-postgres.workspace = true
bytes.workspace = true
sha2.workspace = true
hex.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
tm-llm.workspace = true
tm-sandbox.workspace = true
agent-client-protocol.workspace = true

[dev-dependencies]
tower.workspace = true
tempfile = "3"
serial_test = "3"
